syntax = "proto3";

package proto;

service AccountService {

    //This is for sycnrhonous call where the response get rightaway
    rpc SignIn(SignInRequest) returns (SignInResponse);

    //These two are for stream call where we get a response everytime something is updated
    rpc SubsribeForUpdates(Connection) returns (stream Notification);
    rpc UpdateFirstName(Notification) returns (Close);
}

message SignInRequest {
    string username = 1;
    string password = 2;
}

message SignInResponse {
    string transactionID = 1;
    Data data = 2;
}

message Data {
    string jwtToken = 1;
    int64 guid = 2;
}


message Connection {
    Client client = 1;
    bool active = 2;
}

message Notification {
    string timestamp= 3;
    string id = 1;
    Profile profile = 2;
}

message Client {
    string id = 1;
    string name = 2;
}

message Profile {
    string firstName = 1;
    string lastName = 2; 
}

message Close {  
    
}